--- a/localisation/braz_por/MD_focus_PER_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_PER_l_braz_por.yml
@@ -3260,7 +3260,7 @@
  PER_uneqal_become_equal: "Os Desiguais se Tornam Iguais"
  PER_uneqal_become_equal_desc: "O Irã tem sido sujeito a grande desigualdade e constrangimento no cenário mundial e não toleraremos mais humilhação pelas grandes potências. Em vez disso, começaremos a construir respeito por nós mesmos por quaisquer meios necessários."
  PER_the_persian_gulf: "O Golfo Pérsico, Não Árabe"
- PER_the_persian_gulf_desc: "Os nacionalistas árabes estão a começar a chamar o Golfo Pérsico de “Árabe”, o que é totalmente ultrajante. O Golfo Pérsico é Pérsico e sempre será assim... e faremos com que os árabes saibam disso!"
+ PER_the_persian_gulf_desc: "Os nacionalistas árabes estão a começar a chamar o Golfo Pérsico de “Golfo Árabe”, o que é totalmente ultrajante. O Golfo Pérsico é Pérsico e sempre será assim... e faremos com que os árabes saibam disso!"
  PER_heavy_taxation: "Taxação no Golfo"
  PER_heavy_taxation_desc: "Impor impostos sobre todos os navios que passam pelo estreito de Hormuz nos permitirá arrecadar uma renda extra e também nos dar controle sobre o que entra e sai, já que poderíamos facilmente tomar o navio se necessário."
  PER_khasab_domination: "Ultimato para Musandam"
