--- a/localisation/braz_por/MD_focus_POL_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_POL_l_braz_por.yml
@@ -2591,7 +2591,6 @@
  POL_dangerous_game_idea: "Jogo Perigoso"
  POL_dangerous_game_idea_desc: "NATO e CSTO são tolos. Eles pensam que estão seguros, mas nossa grande aliança os ultrapassará muito em breve."
  POL_advanced_pilots_idea: "Pilotos Avançados"
- POL_better_oil_exploatation_idea: "Melhor Exploração de Petróleo"
  POL_coast_line_protection_idea: "Proteção da Costa"
  POL_new_social_program_idea: "Novo Programa Social"
  POL_tax_cut_idea: "Corte de Impostos"
@@ -3055,8 +3054,6 @@
  POL_improve_coast_line_desc: "A linha costeira não deve ser uma alta prioridade para nós, mas vale a pena ter alguma proteção."
  POL_modernize_office_sectors: "Modernizar Setores de Escritório"
  POL_modernize_office_sectors_desc: "Isso não poderia ser evitado. Caos na administração por causa de uma revolução nacional. Quem poderia esperar por isso..."
- POL_improve_oil_exploatation: "Melhorar a Exploração de Petróleo"
- POL_improve_oil_exploatation_desc: "Não estamos produzindo petróleo suficiente para o que está debaixo da terra, e as refinarias estão produzindo muito pouco combustível para nos manter estáveis."
  POL_start_advanced_training_program: "Iniciar Programa de Treinamento Avançado"
  POL_start_advanced_training_program_desc: "Em vez de nos concentrarmos apenas no exército terrestre, também precisamos garantir que vençamos no ar."
  POL_save_the_revolution: "§RSalvar a Revolução!§!"
@@ -3452,3 +3449,6 @@
  POL_economic_committee_idea_desc: "O Comité Económico supervisiona a nacionalização da indústria e regula o mercado."
  POL_internal_network_idea: "Rede interna"
  POL_internal_network_idea_desc: "A rede interna de agentes e informadores está a garantir os interesses do Estado."
+ POL_better_oil_exploitation_idea2: "Melhor exploração de petróleo"
+ POL_improve_oil_exploitation: "Melhorar a exploração de petróleo"
+ POL_improve_oil_exploitation_desc: "Não estamos a produzir petróleo suficiente para o que está no subsolo e as refinarias estão a produzir muito pouco combustível para nos manter estáveis."
