--- a/localisation/english/MD_focus_PER_l_english.yml
+++ b/localisation/english/MD_focus_PER_l_english.yml
@@ -3577,7 +3577,7 @@
  PER_uneqal_become_equal: "The Unequal become Equal"
  PER_uneqal_become_equal_desc: "Iran has been subject to major inequality and embarrasment on the world stage and we will no longer endure humiliation by the great powers any longer. Instead, we will begin to build respect for ourselves by whatever means necessary."
  PER_the_persian_gulf: "The Persian Gulf, Not Arabian"
- PER_the_persian_gulf_desc: "Arab nationalist are starting to call the Persian Gulf, 'Arabian', which is totally outrageous. The Persian Gulf is Persian, and will always remain so.. and we will make sure the Arabs know this!"
+ PER_the_persian_gulf_desc: "Arab nationalist are starting to call the Persian Gulf, 'Arabian Gulf', which is totally outrageous. The Persian Gulf is Persian, and will always remain so.. and we will make sure the Arabs know this!"
  PER_heavy_taxation: "Taxation in the Gulf"
  PER_heavy_taxation_desc: "Imposing taxes on any ships that pass by the strait of Hormuz will let us collect some extra income, and also give us control over what comes in and out since we could easily take over the ship if needed."
  PER_khasab_domination: "Ultimatum for Musandam"
