--- a/localisation/french/MD_focus_PER_l_french.yml
+++ b/localisation/french/MD_focus_PER_l_french.yml
@@ -3142,7 +3142,7 @@
  PER_uneqal_become_equal: "The Unequal become Equal"
  PER_uneqal_become_equal_desc: "Iran has been subject to major inequality and embarrasment on the world stage and we will no longer endure humiliation by the great powers any longer. Instead, we will begin to build respect for ourselves by whatever means necessary."
  PER_the_persian_gulf: "The Persian Gulf, Not Arabian"
- PER_the_persian_gulf_desc: "Arab nationalist are starting to call the Persian Gulf, 'Arabian', which is totally outrageous. The Persian Gulf is Persian, and will always remain so.. and we will make sure the Arabs know this!"
+ PER_the_persian_gulf_desc: "Arab nationalist are starting to call the Persian Gulf, 'Arabian Gulf', which is totally outrageous. The Persian Gulf is Persian, and will always remain so.. and we will make sure the Arabs know this!"
  PER_heavy_taxation: "Taxation in the Gulf"
  PER_heavy_taxation_desc: "Imposing taxes on any ships that pass by the strait of Hormuz will let us collect some extra income, and also give us control over what comes in and out since we could easily take over the ship if needed."
  PER_khasab_domination: "Ultimatum for Musandam"
@@ -4844,45 +4844,45 @@
  PER_increases_productivity_by_10: "Will §HIncrease Productivity§! in a §HRandom  State§! by §H10§!"
  PER_influence_neighbors: "Will §HInfluence§! Every §HNeighbor§! by §H1%§!"
  PER_crack_down_on_crime: "Crack Down on Crime"
- PER_crack_down_on_crime_desc: "This decision will be made available again in  180 days."
+ PER_crack_down_on_crime_desc: "This decision will be made available again in 180 days."
  PER_housing_projects: "Housing Projects"
- PER_housing_projects_desc: "This decision will be made available again in 180  days."
+ PER_housing_projects_desc: "This decision will be made available again in 180 days."
  PER_appease_clerics: "Fund Religious Schools"
- PER_appease_clerics_desc: "This decision will be made available again in 180  days."
+ PER_appease_clerics_desc: "This decision will be made available again in 180 days."
  PER_rural_development: "Rural Development"
- PER_rural_development_desc: "This decision will be made available again in 180  days."
+ PER_rural_development_desc: "This decision will be made available again in 180 days."
  PER_regional_consolidation: "Regional Consolidation"
- PER_regional_consolidation_desc: "This decision will be made available again in  180 days."
+ PER_regional_consolidation_desc: "This decision will be made available again in 180 days."
  PER_wealth_redistribution: "Wealth Redistribution"
- PER_wealth_redistribution_desc: "This decision will be made available again in  180 days."
+ PER_wealth_redistribution_desc: "This decision will be made available again in 180 days."
  PER_corporate_regulations: "Corporate Regulations"
- PER_corporate_regulations_desc: "This decision will be made available again in  180 days."
+ PER_corporate_regulations_desc: "This decision will be made available again in 180 days."
  PER_expand_workers_rights: "Expansion of Workers Rights"
- PER_expand_workers_rights_desc: "This decision will be made available again in  180 days."
+ PER_expand_workers_rights_desc: "This decision will be made available again in 180 days."
  PER_nationalize_industries: "Nationalize Domestic Industries"
- PER_nationalize_industries_desc: "This decision will be made available again in  180 days."
+ PER_nationalize_industries_desc: "This decision will be made available again in 180 days."
  PER_nationalize_resource_industries: "Nationalize Resource Industries"
- PER_nationalize_resource_industries_desc: "This decision will be made available  again in 180 days."
+ PER_nationalize_resource_industries_desc: "This decision will be made available again in 180 days."
  PER_civil_liberty_expansion: "Expansion of Civil Liberties"
- PER_civil_liberty_expansion_desc: "This decision will be made available again  in 180 days."
+ PER_civil_liberty_expansion_desc: "This decision will be made available again in 180 days."
  PER_secularist_policies: "Secularist Policies"
- PER_secularist_policies_desc: "This decision will be made available again in  180 days."
+ PER_secularist_policies_desc: "This decision will be made available again in 180 days."
  PER_expansion_of_universities: "Expansion of Universities"
- PER_expansion_of_universities_desc: "This decision will be made available again  in 180 days."
+ PER_expansion_of_universities_desc: "This decision will be made available again in 180 days."
  PER_open_borders: "Open Borders"
  PER_open_borders_desc: "This decision will be made available again in 180 days."
  PER_cut_back_military_spending: "Cut Back on Military Spending"
- PER_cut_back_military_spending_desc: "This decision will be made available  again in 180 days."
+ PER_cut_back_military_spending_desc: "This decision will be made available again in 180 days."
  PER_cultural_preservation: "Cultural Preservation"
- PER_cultural_preservation_desc: "This decision will be made available again in  180 days."
+ PER_cultural_preservation_desc: "This decision will be made available again in 180 days."
  PER_military_infrastructure: "Expansion of Military Infrastructure"
- PER_military_infrastructure_desc: "This decision will be made available again  in 180 days."
+ PER_military_infrastructure_desc: "This decision will be made available again in 180 days."
  PER_arms_industry_expansion: "Expansion of The Arms Industry"
- PER_arms_industry_expansion_desc: "This decision will be made available again  in 180 days."
+ PER_arms_industry_expansion_desc: "This decision will be made available again in 180 days."
  PER_deport_illegals: "Deportation of Illegal Migrants"
- PER_deport_illegals_desc: "This decision will be made available again in 180  days."
+ PER_deport_illegals_desc: "This decision will be made available again in 180 days."
  PER_promotion_of_militaristic_ideals: "Promotion of Militaristic Ideals"
- PER_promotion_of_militaristic_ideals_desc: "This decision will be made  available again in 180 days."
+ PER_promotion_of_militaristic_ideals_desc: "This decision will be made available again in 180 days."
  PER_appoint_new_prime_minister: "Appoint a New Prime Minister"
  PER_civilwar.20.t: "Islamic Republic Begins Crack-Down"
  PER_civilwar.20.d: "The Islamic Republic has begun a massive crackdown of the protests, and are going to start sabotaging our attempts at overthrowing their corrupt, and weakened regime."
