--- a/localisation/french/MD_focus_POL_l_french.yml
+++ b/localisation/french/MD_focus_POL_l_french.yml
@@ -2591,7 +2591,6 @@
  POL_dangerous_game_idea: "Dangerous Game"
  POL_dangerous_game_idea_desc: "NATO and CSTO are fools. They think they are safe, but our great alliance will surpass them very soon."
  POL_advanced_pilots_idea: "Advanced Pilots"
- POL_better_oil_exploatation_idea: "Better Oil Exploatation"
  POL_coast_line_protection_idea: "Coastline Protection"
  POL_new_social_program_idea: "New Social Program"
  POL_tax_cut_idea: "Tax Cut"
@@ -3055,8 +3054,6 @@
  POL_improve_coast_line_desc: "The coastline shouldn't be a high priority for us, but it's worth having some protection."
  POL_modernize_office_sectors: "Modernize Office Sectors"
  POL_modernize_office_sectors_desc: "This couldn't be avoided. Chaos in the administration because of a nationwide revolution. Who could have expected this..."
- POL_improve_oil_exploatation: "Improve Oil Exploatation"
- POL_improve_oil_exploatation_desc: "We are not producing enough oil for what is underground, and refineries are producing too little fuel to keep us stable."
  POL_start_advanced_training_program: "Start Advanced Training Program"
  POL_start_advanced_training_program_desc: "Instead of focusing solely on the land army, we also need to make sure we win in the air."
  POL_save_the_revolution: "§RSave The Revolution!§!"
@@ -3452,3 +3449,6 @@
  POL_economic_committee_idea_desc: "Le Comité économique supervise la nationalisation de l'industrie et régule le marché."
  POL_internal_network_idea: "Réseau Interne"
  POL_internal_network_idea_desc: "Un réseau d’agents et d’informateurs garantira notre position et contribuera à stabiliser la société."
+ POL_better_oil_exploitation_idea2: "Une meilleure exploitation du pétrole"
+ POL_improve_oil_exploitation: "Améliorer l’exploitation pétrolière"
+ POL_improve_oil_exploitation_desc: "Nous ne produisons pas assez de pétrole pour ce qui se trouve sous terre, et les raffineries produisent trop peu de carburant pour assurer notre stabilité."
