--- a/localisation/polish/MD_focus_PER_l_polish.yml
+++ b/localisation/polish/MD_focus_PER_l_polish.yml
@@ -3262,7 +3262,7 @@
  PER_uneqal_become_equal: "Nierówni stają się równi"
  PER_uneqal_become_equal_desc: "Iran stał się przedmiotem poważnych nierówności i wstydu na arenie światowej i nie będziemy już dłużej znosić upokorzeń ze strony wielkich mocarstw. Zamiast tego zaczniemy budować szacunek do siebie wszelkimi niezbędnymi środkami."
  PER_the_persian_gulf: "Zatoka Perska, nie Arabska"
- PER_the_persian_gulf_desc: "Arabscy ​​nacjonaliści zaczynają nazywać Zatokę Perską „arabską”, co jest całkowicie oburzające. Zatoka Perska jest perska i zawsze taka pozostanie.. i upewnimy się, że Arabowie o tym wiedzą!"
+ PER_the_persian_gulf_desc: "Arabscy ​​nacjonaliści zaczynają nazywać Zatokę Perską „Zatoką Arabską”, co jest całkowicie oburzające. Zatoka Perska jest perska i zawsze taka pozostanie.. i upewnimy się, że Arabowie o tym wiedzą!"
  PER_heavy_taxation: "Opodatkowanie w Zatoce Perskiej"
  PER_heavy_taxation_desc: "Nałożenie podatków na wszystkie statki przepływające przez cieśninę Ormuz pozwoli nam uzyskać dodatkowy dochód, a także da nam kontrolę nad tym, co wpływa i wypływa, ponieważ w razie potrzeby moglibyśmy łatwo przejąć statek."
  PER_khasab_domination: "Ultimatum dla Musandama"
