--- a/localisation/russian/MD_focus_PMR_l_russian.yml
+++ b/localisation/russian/MD_focus_PMR_l_russian.yml
@@ -611,4 +611,4 @@
  transnistria.28.a: "Неплохо"
  PMR_general_monarchist_christian: "Генерал-монархист-христианин"
  PMR_it_giant: "IT-инвестиции"
- PMR_use_kobasna: "Empty the §Y[PMR.GetFlag]Transnistrian§! arms depots"
+ PMR_use_kobasna: "Опустошите §Y[PMR.GetFlag]Приднестровье§! склады оружия"
