--- a/localisation/simp_chinese/MD_focus_PER_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_PER_l_simp_chinese.yml
@@ -3568,7 +3568,7 @@
  PER_interventionism_is_key: "干预主义是关键"
  PER_interventionism_is_key_desc: "我们不能坐视不管，看着我们的邻国被中东以外的大国所支配。我们将介入并为他们做这件事！"
  PER_the_persian_gulf: "波斯湾，不是阿拉伯"
- PER_the_persian_gulf_desc: "阿拉伯民族主义者开始称波斯湾为“阿拉伯”，这完全是无礼的。波斯湾是波斯的，而且永远如此……我们会确保阿拉伯人知道这一点！"
+ PER_the_persian_gulf_desc: "阿拉伯民族主义者开始称波斯湾为“阿拉伯湾”，这完全是无礼的。波斯湾是波斯的，而且永远如此……我们会确保阿拉伯人知道这一点！"
  PER_heavy_taxation: "海湾税收"
  PER_heavy_taxation_desc: "对任何经过霍尔木兹海峡的船只征税，将让我们获得一些额外的收入，也让我们控制进出的货物，因为如果需要，我们可以轻易地接管船只。"
  PER_khasab_domination: "对穆桑代姆的最后通牒"
