--- a/localisation/simp_chinese/MD_focus_POL_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_POL_l_simp_chinese.yml
@@ -3090,7 +3090,6 @@
  POL_dangerous_game_idea: "危险棋局"
  POL_dangerous_game_idea_desc: "北约和集体安全条约组织都是傻瓜。他们以为自己安全了，但我们大联盟很快就会超越他们。"
  POL_advanced_pilots_idea: "高级飞行员"
- POL_better_oil_exploatation_idea: "更好的石油开采"
  POL_coast_line_protection_idea: "海岸防卫"
  POL_new_social_program_idea: "新的社交计划"
  POL_tax_cut_idea: "减税"
@@ -3277,8 +3276,6 @@
  POL_improve_coast_line_desc: "海岸线不应该是我们的首要任务，但值得采取一些保护措施。"
  POL_modernize_office_sectors: "办公部门现代化"
  POL_modernize_office_sectors_desc: "这是无法避免的。由于全国革命而导致政府混乱。谁能料到这..."
- POL_improve_oil_exploatation: "改善石油开采"
- POL_improve_oil_exploatation_desc: "我们生产的石油不足以满足需求，炼油厂生产的燃料也太少，无法维持我们的稳定。"
  POL_start_advanced_training_program: "启动高级培训计划"
  POL_start_advanced_training_program_desc: "我们不能只专注于陆军，还需要确保我们在空中取得胜利。"
  POL_save_the_revolution: "§R挽救革命！§!"
@@ -3452,3 +3449,6 @@
  POL_social_committee_desc: "一些人的社会生活必须受到规范，我们需要将我们的国家从西方的堕落议程中拯救出来。"
  POL_economic_committee_idea: "经济委员会"
  POL_economic_committee_idea_desc: "经济委员会负责监督工业国有化并规范市场。"
+ POL_better_oil_exploitation_idea2: "更好的石油开采"
+ POL_improve_oil_exploitation: "提高石油开采效率"
+ POL_improve_oil_exploitation_desc: "我们生产的地下石油不够，炼油厂生产的燃料太少，无法维持我们的稳定。"
