--- a/localisation/english/MD_focus_POL_l_english.yml
+++ b/localisation/english/MD_focus_POL_l_english.yml
@@ -3299,7 +3299,7 @@
  POL_dangerous_game_idea: "Dangerous Game"
  POL_dangerous_game_idea_desc: "NATO and CSTO are fools. They think they are safe, but our great alliance will surpass them very soon."
  POL_advanced_pilots_idea: "Advanced Pilots"
- POL_better_oil_exploatation_idea: "Better Oil Exploatation"
+ POL_better_oil_exploitation_idea2: "Better Oil Exploitation"
  POL_coast_line_protection_idea: "Coastline Protection"
  POL_new_social_program_idea: "New Social Program"
  POL_tax_cut_idea: "Tax Cut"
@@ -3765,8 +3765,8 @@
  POL_improve_coast_line_desc: "The coastline shouldn't be a high priority for us, but it's worth having some protection."
  POL_modernize_office_sectors: "Modernize Office Sectors"
  POL_modernize_office_sectors_desc: "This couldn't be avoided. Chaos in the administration because of a nationwide revolution. Who could have expected this..."
- POL_improve_oil_exploatation: "Improve Oil Exploatation"
- POL_improve_oil_exploatation_desc: "We are not producing enough oil for what is underground, and refineries are producing too little fuel to keep us stable."
+ POL_improve_oil_exploitation: "Improve Oil Exploitation"
+ POL_improve_oil_exploitation_desc: "We are not producing enough oil for what is underground, and refineries are producing too little fuel to keep us stable."
  POL_start_advanced_training_program: "Start Advanced Training Program"
  POL_start_advanced_training_program_desc: "Instead of focusing solely on the land army, we also need to make sure we win in the air."
  POL_save_the_revolution: "§RSave The Revolution!§!"
