--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -2289,6 +2289,12 @@
  Ger_idea_European_Army_desc: "Germany form the Anker for a European Army, by form integrative structures his smaller Allies."
  GER_idea_Peace_dividende: "Peace Dividend"
  GER_idea_Peace_dividende_desc: "After the end of the Cold War and the collapse of the USSR, there is no longer a need to maintain a large military force. Instead, we should redirect those funds to benefit our people and invest in areas such as social services, infrastructure, and public welfare. By reallocating these resources, we can improve the quality of life and promote economic growth, ensuring that the peace dividend contributes positively to our society."
+ GER_idea_Innere_fuhrung_I: "Concept of Innere Führung in the German Bundeswehr"
+ GER_idea_Innere_fuhrung_I_desc: "Innere Führung (Internal Leadership) is a foundational concept that shapes the ethical, legal, and organizational framework of the German Bundeswehr. Developed in the aftermath of World War II, it serves as a guiding philosophy to ensure that the German military operates under democratic principles and adheres to the values of a free society."
+ GER_idea_Innere_fuhrung_II: "Concept of Innere Führung in the German Bundeswehr"
+ GER_idea_Innere_fuhrung_II_desc: "Innere Führung (Internal Leadership) is a foundational concept that shapes the ethical, legal, and organizational framework of the German Bundeswehr. Developed in the aftermath of World War II, it serves as a guiding philosophy to ensure that the German military operates under democratic principles and adheres to the values of a free society."
+ GER_idea_vpr: "The Neue Verteidigungspolitische Richtlinie"
+ GER_idea_vpr_desc: "The Neue Verteidigungspolitische Richtlinie marked a pivotal shift in German defense policy. It has redefined the Bundeswehr’s role from a primarily territorial defense force to a modern, flexible military capable of addressing global security challenges. The VPR continues to guide the Bundeswehr’s operations, ensuring that Germany remains a proactive and responsible actor in international security affairs. Through these guidelines, the Bundeswehr is better positioned to contribute to global peace and stability in an increasingly complex and interconnected world."
 
 ### Dynamic Modifiers
  GER_wind_farms: "§GWind Farms§!"
@@ -2308,17 +2314,12 @@
  GER_upgraded_mining_equipment: "Upgraded Mining Equipment"
  GER_generic_spending_laws: "Government Public Budget"
  GER_generic_spending_laws_desc: "The Government public budget is the public tax funds which provides funding to our public services sector which includes; §Yhealthcare§!, §Yeducation§! & §Yinternal security§!."
-<<<<<<< Updated upstream
- GER_Bundeswehr_modifier: "Bundeswehr"
- GER_Bundeswehr_modifier_desc: "This Modifier will show you all the benefits you get for your Army from the focuses you take"
-=======
  GER_Bundeswehr_modifier: "Heer"
  GER_Bundeswehr_modifier_desc: "The German Heer in the year 2000 stands at a crossroads. Having been primarily designed and structured as a Cold War army, its main focus was on defending against a potential large-scale conflict with the Warsaw Pact in central Europe. However, with the end of the Cold War and the reunification of Germany, the Heer faces the challenge of transforming itself to meet new, diverse mission requirements in a rapidly changing global security environment."
  GER_Luftwaffe_modifier: "Luftwaffe"
  GER_Luftwaffe_modifier_desc: "The Luftwaffe, the air force of the Bundeswehr. Originally designed as a Cold War force, its primary mission was to defend West German airspace against potential Soviet aggression. However, with the end of the Cold War, the reunification of Germany, and the evolving nature of global threats, the Luftwaffe faces the challenge of transforming to meet new mission requirements."
  GER_Deutsche_Marine_modifier: "Deutsche Marine"
  GER_Deutsche_Marine_modifier_desc: "During the Cold War, the German Navy's mission was to protect West Germany's coastlines, ensure control of vital sea lanes, and counter Soviet naval power in the Baltic Sea. The reunification of Germany in 1990 brought about the integration of the East German Navy (Volksmarine) into the Deutsche Marine, merging different doctrines, equipment, and personnel into a single cohesive force."
->>>>>>> Stashed changes
 
 ### Opinion Modifiers
  mykonos_judgement: "Mykonos Judgement"
