Australian Regional content events

--- a/localisation/english/MD_focus_AST_l_english.yml
+++ b/localisation/english/MD_focus_AST_l_english.yml
@@ -502,7 +502,7 @@ l_english:
  australia_md.129.o1: "Sign the Agreement"
  australia_md.129.o2: "We cannot agree to these terms..."
  australia_md.130.t: "Aceh-Malay Relations Summit"
- australia_md.130.d: "A diplomatic meeting has been called by Australia between [IND.GetLeader] and [MAY.GetNameDefCap] to discuss the potential of a non-aggression pact between [IND.GetNameDefCap] and Malaysia to remove the need to devote our military assets along the mutual border, and provide a surety of peace between the two nations. Should we accept the [AST.GetAdjective] supported offer from [IND.GetNameDefCap] of a mutual non-aggression pact?"
+ australia_md.130.d: "A diplomatic meeting has been called by Australia between [IND.GetLeader] and [MAY.GetNameDefCap] to discuss the potential of a non-aggression pact between [IND.GetNameDefCap] and Malaysia to remove the need to devote our military assets along the mutual border, and provide a surety of peace between the two nations. Should we accept the [AST.GetAdjective] supported offer from [MAY.GetNameDefCap] of a mutual non-aggression pact?"
  australia_md.130.o1: "Sign the Agreement"
  australia_md.130.o2: "We cannot agree to these terms..."
  australia_md.131.t: "Indo-Malay Relation Summit Concludes"
@@ -521,8 +521,39 @@ l_english:
  australia_md.133.d2: "[KOR.GetNameDefCap] has refused our request for a formal Trade Agreement to be signed between our nations, hopefully this does not mark the beginning of a rift between our nations, they seem to have forgotten our past commitments to them."
  australia_md.133.o1: "The agreement is signed"
  australia_md.133.o2: "Unfortunately an agreement could not be reached"
- 
-
+ australia_md.134.t: "[AST.GetAdjective] Hyundai Technology Purchase Request"
+ australia_md.134.d: "An offer from [AST.GetNameDefCap] has been received detailing the [AST.GetAdjective] intent to purchase Hyundai Tank and armor related technologies with our permission, they will us $12bn for the acquisition of these blueprints and designs so their own scientists can research their Armor technologies more efficiently."
+ australia_md.134.o1: "Permit the Sale"
+ australia_md.134.o2: "Deny the Sale"
+ australia_md.135.t: "[KOR.GetAdjective] Response to Hyundai Tech Purchase"
+ australia_md.135.d1: "Our diplomats returned from [KOR.GetNameDefCap] bearing good news, the request to purchase Hyundai armoured technologies was successful, our scientists are eagerly awaiting the new schematics."
+ australia_md.135.d2: "Our diplomats returned from [KOR.GetNameDefCap] bearing bad news, the request to purchase Hyundai armoured technologies was unsuccessful, our own scientists will have to perform the research on the armoured technologies without assistance."
+ australia_md.135.o1: "The diplomats secured a good deal..."
+ australia_md.135.o2: "This is dissapointing news."
+ australia_md.136.t: "Beginnings of a Korean Dialogue"
+ australia_md.136.d: "A diplomatic meeting sponsored by [AST.GetNameDefCap] is underway between [NKO.GetNameDefCap] and [KOR.GetLeader] to discuss a future of co-operation between [KOR.GetNameDefCap] and [NKO.GetNameDefCap], after much deliberation the offer on the table is a mutual non-agreesion pact which would mark a historical upgrade from our current armistice agreement. Should we accept the offer from [NKO.GetNameDefCap] of a mutual non-aggression pact?"
+ australia_md.136.o1: "Sign the Agreement"
+ australia_md.136.o2: "This is asking too much..."
+ australia_md.137.t: "Beginnings of a Korean Dialogue"
+ australia_md.137.d: "A diplomatic meeting has been called by Australia between [NKO.GetLeader] and [KOR.GetNameDefCap] to discuss the potential of a non-aggression pact between [NKO.GetNameDefCap] and [KOR.GetNameDefCap] after much deliberation the offer on the table is a mutual non-agreesion pact which would mark a historical upgrade from our current armistice agreement. Should we accept the [AST.GetAdjective] supported offer from [KOR.GetNameDefCap] of a mutual non-aggression pact?"
+ australia_md.137.o1: "Sign the Agreement"
+ australia_md.137.o2: "Korea is ours!"
+ australia_md.138.t: "Korean Relation Summit Concludes"
+ australia_md.138.d1: "With [AST.GetAdjective] mediation we have managed to reach a unprecidented historical agreement between [KOR.GetNameDefCap] and [NKO.GetNameDefCap], with both countries consenting to the agreement, with the signatures of [NKO.GetLeader] and [KOR.GetLeader] now on the offical documents this marks a new era of peace and prosperity for all Koreans."
+ australia_md.138.d2: "[KOR.GetLeader] was willing to agree to the non-aggression pact however [NKO.GetLeader] had reservations and could not commit. The summit has reached an impasse and has now concluded."
+ australia_md.138.d3: "[NKO.GetLeader] was willing to agree to the non-aggression pact however [KOR.GetLeader] had reservations and could not commit. The summit has reached an impasse and has now concluded."
+ australia_md.138.d4: "The summit made little progress with both [KOR.GetLeader] and [NKO.GetLeader] rejecting the [AST.GetAdjective] backed proposal, The history of tensions being to much to overcome at the moment for both leaders, after hours of unsuccessful deliberation The summit has concluded."
+ australia_md.138.o1: "The Summit was an unprecidented Historical Success"
+ australia_md.138.o2: "Nothing was gained..."
+ australia_md.139.t: "[AST.GetAdjective]-[NKO.GetAdjective] Dialogue"
+ australia_md.139.d: "A meeting was requested with our glorious leader [NKO.GetLeader] by [AST.GetLeader] from [AST.GetNameDefCap], instead a meeting between diplomats is currently taking place, where [AST.GetLeader] is expressing a willingness to potentially open full diplomatic relations together in the future, and has made some small concessions as a sign of goodwill. However our history with [AST.GetNameDefCap] is complicated due to the fact they actively fought in the Korean war in the past, How should our diplomats repsond? "
+ australia_md.139.o1: "Welcome potenital future relations"
+ australia_md.139.o2: "This has no merit."
+ australia_md.140.t: "[NKO.GetAdjective] Meeting Adjourns"
+ australia_md.140.d1: "The meeting was a suprising success gaining the consent from [NKO.GetNameDefCap] for possible future meetings, perhaps this is a sign that [NKO.GetNameDefCap] is willing to work peacefully togetehr on the global stage."
+ australia_md.140.d2: "The meeting was a failure not even gaining the consent from [NKO.GetNameDefCap] for possible future meetings, perhaps this is a sign that [NKO.GetNameDefCap] is returning to their hostile agenda again."
+ australia_md.140.o1: "A diplomatic victory!"
+ australia_md.140.o2: "It was unlikely to be successful anyway..."
 
  australia_md.150.t: "Australia Cancels the 99-year Port Lease"
  australia_md.150.d: "Australia has cancelled our 99-year Lease of the Landbridge port used for mining operations, citing security issues at the port and the lengthy nature of the 99 year lease, our diplomats will vehemently oppose this action taken by Australia."
@@ -1744,7 +1775,7 @@ l_english:
  AST_Aceh_Malay_Relations_aus_tt: "§YIf both §! §GAceh §! §Yand §! §GMalaysia accept: §! "
  AST_Indo_Malay_Relations_aus_tt: "§YIf both §! §GIndonesia §! §Yand §! §GMalaysia accept: §! "
  AST_Korea_Australia_Free_Trade_Agreement_tt: "§GIf Korea Accepts: §!"
-
+ AST_Dialogue_with_the_North_aus_tt: "§GIf Korea DPR Accepts: §!"
 
 #military
  AST_ADF: "ADF"
