--- a/localisation/english/MD_focus_FRA_l_english.yml
+++ b/localisation/english/MD_focus_FRA_l_english.yml
@@ -661,8 +661,10 @@
  FRA_idea_french_red_army_desc: "The revolution lies in a shallow cradle close to the sway of the ocean. The new Red Army has been established with young and old looking to defend equality and freedom for our great country."
  FRA_idea_strong_guy: "Strong Guy"
  FRA_idea_strong_guy_desc: "It is evident that Europe needs a new leader. France will take this mantle as the new strong man of Europe as we push the countries of Europe towards our ideals and lead it into the future."
- FRA_idea_communist_revolution: "Fires of Revolution"
- FRA_idea_communist_revolution_desc: "The fires of revolution burn ever brighter as the wheels of time continue to change. We must seek to stoke these flames by pursuing the revolution here at home and abroad."
+ FRA_idea_communist_revolution1: "Fires of Revolution"
+ FRA_idea_communist_revolution1_desc: "The fires of revolution burn ever brighter as the wheels of time continue to change. We must seek to stoke these flames by pursuing the revolution here at home and abroad."
+ FRA_idea_communist_revolution2: "Great Fires of Revolution"
+ FRA_idea_communist_revolution2_desc: "The revolution is about to sweep the world for the future of mankind."
  FRA_idea_administrative_reforms: "Administrative Reforms"
  FRA_idea_administrative_reforms_desc: "The bureaucratic machine of France has undergone a series of important reforms reducing some of the cost as well as expanding the ability of the government to enact and put into effect a variety of new policy."
  FRA_idea_infrastructure_projects: "Infrastructure Projects"
