--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -2887,7 +2887,7 @@
  VICTORY_POINTS_6686: "Luchegorsk"
  VICTORY_POINTS_6833: "Dalnegorsk"
  VICTORY_POINTS_11879: "Slavyanka"
- VICTORY_POINTS_11624: "Vostok"
+ VICTORY_POINTS_11624: "Cúcuta"
  VICTORY_POINTS_6474: "Donetsk"
  VICTORY_POINTS_9461: "Luhansk"
  VICTORY_POINTS_3479: "Kostiantynivka"
@@ -2999,7 +2999,7 @@
  VICTORY_POINTS_4473: "Lankaran"
  VICTORY_POINTS_10284: "Kostanay"
  VICTORY_POINTS_7874: "Petropavlovsk"
- VICTORY_POINTS_7429: "Rudniy"
+ VICTORY_POINTS_7429: "Moquegua"
  VICTORY_POINTS_1418: "Kokshetau"
  VICTORY_POINTS_7383: "Arkalyk"
  VICTORY_POINTS_7233: "Zhetikara"
@@ -3012,7 +3012,7 @@
  VICTORY_POINTS_7890: "Ridder"
  VICTORY_POINTS_10308: "Astana"
  VICTORY_POINTS_4333: "Karaganda"
- VICTORY_POINTS_12121: "Jezkazgan"
+ VICTORY_POINTS_12121: "Ciudad Piar"
  VICTORY_POINTS_1239: "Balkhash"
  VICTORY_POINTS_4238: "Atbasar"
  VICTORY_POINTS_10148: "Shymkent"
@@ -3025,9 +3025,9 @@
  VICTORY_POINTS_4773: "Shu"
  VICTORY_POINTS_7341: "Aktobe"
  VICTORY_POINTS_11537: "Oral"
+ VICTORY_POINTS_1243: "Jezkazgan"
  VICTORY_POINTS_3618: "Atyrau"
  VICTORY_POINTS_11701: "Aktau"
- VICTORY_POINTS_11591: "Kulsary"
  VICTORY_POINTS_10262: "Beyneu"
  VICTORY_POINTS_1220: "Shalkar"
  VICTORY_POINTS_10253: "Kandyagash"
@@ -3893,7 +3893,7 @@
  VICTORY_POINTS_7936: "Cali"
  VICTORY_POINTS_7991: "Tumaco"
  VICTORY_POINTS_10494: "Buenaventura"
- VICTORY_POINTS_4969: "Jurado"
+ VICTORY_POINTS_4969: "Bucaramanga"
  VICTORY_POINTS_12703: "Barranquilla"
  VICTORY_POINTS_8056: "Santa Marta"
  VICTORY_POINTS_10864: "Montería"
@@ -3902,7 +3902,6 @@
  VICTORY_POINTS_10747: "Bogotá"
  VICTORY_POINTS_11469: "Medellín"
  VICTORY_POINTS_7993: "Bucaramanga"
- VICTORY_POINTS_12845: "Cúcuta"
  VICTORY_POINTS_10790: "Ibagué"
  VICTORY_POINTS_10846: "Pasto"
  VICTORY_POINTS_11538: "Segovia"
